// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing elodin syntax should correctly parse comments 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "type": "Identifier",
          "value": "Bar",
        },
        Object {
          "comments": Array [
            " baz",
          ],
          "type": "Identifier",
          "value": "Foo",
        },
      ],
      "comments": Array [
        " variant comment",
      ],
      "name": "Foo",
      "type": "Variant",
    },
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "comments": Array [
            " inline",
          ],
          "dynamic": false,
          "property": "borderColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 255,
            "format": "rgb",
            "green": 255,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "paddingLeft",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 15,
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "marginTop",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "fractional": 2,
            "integer": 1,
            "negative": false,
            "type": "Float",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": true,
          "property": "borderWidth",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "environment": false,
            "type": "Variable",
            "value": "width",
          },
        },
        Object {
          "comments": Array [
            " another",
          ],
          "dynamic": false,
          "property": "animationName",
          "raw": true,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "keyframe",
          },
        },
      ],
      "comments": Array [
        " A comment",
        " Another one",
      ],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse conditionals 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "type": "Identifier",
          "value": "Dark",
        },
        Object {
          "comments": Array [],
          "type": "Identifier",
          "value": "Light",
        },
      ],
      "comments": Array [],
      "name": "Mode",
      "type": "Variant",
    },
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "body": Array [
            Object {
              "comments": Array [],
              "dynamic": false,
              "property": "backgroundColor",
              "raw": false,
              "type": "Declaration",
              "value": Object {
                "alpha": 1,
                "blue": 255,
                "format": "keyword",
                "green": 0,
                "red": 0,
                "type": "Color",
              },
            },
          ],
          "comments": Array [],
          "operator": "=",
          "property": Object {
            "type": "Identifier",
            "value": "Mode",
          },
          "type": "Conditional",
          "value": Object {
            "type": "Identifier",
            "value": "Dark",
          },
        },
      ],
      "comments": Array [],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse env condition 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "comments": Array [],
              "dynamic": false,
              "property": "backgroundColor",
              "raw": false,
              "type": "Declaration",
              "value": Object {
                "alpha": 1,
                "blue": 0,
                "format": "keyword",
                "green": 0,
                "red": 255,
                "type": "Color",
              },
            },
          ],
          "boolean": true,
          "comments": Array [],
          "property": Object {
            "environment": true,
            "type": "Variable",
            "value": "hover",
          },
          "type": "Conditional",
        },
        Object {
          "body": Array [
            Object {
              "comments": Array [],
              "dynamic": false,
              "property": "backgroundColor",
              "raw": false,
              "type": "Declaration",
              "value": Object {
                "alpha": 1,
                "blue": 255,
                "format": "keyword",
                "green": 0,
                "red": 0,
                "type": "Color",
              },
            },
            Object {
              "body": Array [
                Object {
                  "comments": Array [],
                  "dynamic": false,
                  "property": "backgroundColor",
                  "raw": false,
                  "type": "Declaration",
                  "value": Object {
                    "alpha": 1,
                    "blue": 0,
                    "format": "keyword",
                    "green": 128,
                    "red": 0,
                    "type": "Color",
                  },
                },
              ],
              "boolean": true,
              "comments": Array [],
              "property": Object {
                "environment": true,
                "type": "Variable",
                "value": "hover",
              },
              "type": "Conditional",
            },
          ],
          "comments": Array [],
          "operator": ">=",
          "property": Object {
            "environment": true,
            "type": "Variable",
            "value": "viewportWidth",
          },
          "type": "Conditional",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 320,
          },
        },
      ],
      "comments": Array [],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse fragments 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "flexDirection",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "row",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "alignSelf",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "stretch",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "flexGrow",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 0,
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "flexShrink",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 1,
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "flexBasis",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 50,
          },
        },
      ],
      "comments": Array [],
      "name": "Flex",
      "type": "Fragment",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse multiple styles 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "paddingLeft",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 10,
          },
        },
      ],
      "comments": Array [],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "lineHeight",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 2,
          },
        },
      ],
      "comments": Array [],
      "format": "text",
      "name": "Label",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse styles 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "comments": Array [
            " foo",
          ],
          "dynamic": false,
          "property": "borderColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 255,
            "format": "rgb",
            "green": 255,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "paddingLeft",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 15,
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "marginTop",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "fractional": 2,
            "integer": 1,
            "negative": false,
            "type": "Float",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": true,
          "property": "borderWidth",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "environment": false,
            "type": "Variable",
            "value": "width",
          },
        },
        Object {
          "comments": Array [],
          "dynamic": false,
          "property": "animationName",
          "raw": true,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "keyframe",
          },
        },
      ],
      "comments": Array [],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;
